Updates to datamodel

--- a/FishersYMCA.Swimming.WebAPI/Models/Data/SwimModel.tt
+++ b/FishersYMCA.Swimming.WebAPI/Models/Data/SwimModel.tt
@@ -24,7 +24,8 @@ foreach (var entity in typeMapper.GetItemsToGenerate<EntityType>(itemCollection)
     BeginNamespace(code);
 #>
 <#=codeStringGenerator.UsingDirectives(inHeader: false)#>
-<#=codeStringGenerator.EntityClassOpening(entity)#>
+using FishersYMCA.Swimming.Domain;
+<#=codeStringGenerator.EntityClassOpening(entity)#> : Entity
 {
 <#
     var propertiesWithDefaultValues = typeMapper.GetPropertiesWithDefaultValues(entity);
