--- a/FishersYMCA.Swimming.WebAPI/Views/Home/Index.cshtml
+++ b/FishersYMCA.Swimming.WebAPI/Views/Home/Index.cshtml
@@ -8,21 +8,21 @@
                 <div class="tabbable tabs-above">
                     <ul class="nav nav-tabs">
                         <li class="active">
-                            <a href="#tab1" data-toggle="tab">Monday</a></li>
+                            <a href="#tabMonday" data-toggle="tab">Monday</a></li>
                         <li>
-                            <a href="#tab2" data-toggle="tab">Tuesday</a></li>
+                            <a href="#tabTuesday" data-toggle="tab">Tuesday</a></li>
                               <li>
-                            <a href="#tab3" data-toggle="tab">Wednesday</a></li>
+                            <a href="#tabWednesday" data-toggle="tab">Wednesday</a></li>
                               <li>
-                            <a href="#tab4" data-toggle="tab">Thursday</a></li>
+                            <a href="#tabThursday" data-toggle="tab">Thursday</a></li>
                               <li>
-                            <a href="#tab5" data-toggle="tab">Friday</a></li>
+                            <a href="#tabFriday" data-toggle="tab">Friday</a></li>
                     </ul>
                     <div class="tab-content">
-                        <div class="tab-pane active" id="tab1">
+                        <div class="tab-pane active" id="tabMonday">
                            @* <span class="label label-info">Monday Schedule</span>*@
-                            <table id="schedule" class="table table-striped table-bordered table-condensed">
-                            </table>
+                   @*         <table id="schedule" class="table table-striped table-bordered table-condensed">
+                            </table>*@
 
                             <div class="actions">
                                @* <a id="generate" class="work" href="#" title="Generate a possible schedule">Generate Schedule</a>*@
@@ -32,20 +32,21 @@
 
                             </div>
                         </div>
-                        <div class="tab-pane" id="tab2">
+                        <div class="tab-pane" id="tabTuesday">
+
                           @* <span class="label label-info">Tuesday Schedule</span>*@
-                            <table id="TuesSchedule" class="table table-striped table-bordered">
-                            </table>
+                        @*    <table id="TuesSchedule" class="table table-striped table-bordered">
+                            </table>*@
                         </div>
-                        <div class="tab-pane" id="tab3">
+                        <div class="tab-pane" id="tabWednesday">
                            @* <span class="label label-info">Wednesday Schedule</span>*@
-                            <table id="WedSchedule" class="table table-striped table-bordered">
-                            </table>
+                           @* <table id="WedSchedule" class="table table-striped table-bordered">
+                            </table>*@
                         </div>
-                        <div class="tab-pane" id="tab4">
+                        <div class="tab-pane" id="tabThursday">
                             <span class="label label-info">Thursday Schedule</span>
                         </div>
-                        <div class="tab-pane" id="tab5">
+                        <div class="tab-pane" id="tabFriday">
                             <span class="label label-info">Friday Schedule</span>
                         </div>
                     </div>
