--- a/FishersYMCA.Swimming.WebAPI/Views/Home/Index.cshtml
+++ b/FishersYMCA.Swimming.WebAPI/Views/Home/Index.cshtml
@@ -1,169 +1,82 @@
-﻿
-     <div class="container">
+﻿<div class="container-fluid">
 
-        <div class="row">
-          
-            <div class="span8">
-        
-                <div class="tabbable tabs-above">
-                    <ul class="nav nav-tabs">
-                        <li class="active">
-                            <a href="#tabMonday" data-toggle="tab">Monday</a></li>
-                        <li>
-                            <a href="#tabTuesday" data-toggle="tab">Tuesday</a></li>
-                              <li>
-                            <a href="#tabWednesday" data-toggle="tab">Wednesday</a></li>
-                              <li>
-                            <a href="#tabThursday" data-toggle="tab">Thursday</a></li>
-                              <li>
-                            <a href="#tabFriday" data-toggle="tab">Friday</a></li>
-                    </ul>
-                    <div class="tab-content">
-                        <div class="tab-pane active" id="tabMonday">
-                           @* <span class="label label-info">Monday Schedule</span>*@
-                   @*         <table id="schedule" class="table table-striped table-bordered table-condensed">
-                            </table>*@
+    <div class="row">
 
-                            <div class="actions">
-                               @* <a id="generate" class="work" href="#" title="Generate a possible schedule">Generate Schedule</a>*@
-                                <a id="AddLaneAssignment" class="work" href="#" title="Add a pool lane assignment.">Add Pool Assignment</a>
-                                @*<a href="#themodal" role="button" class="btn btn-primary" data-toggle="modal">Launch a modal dialog</a>*@
+        <div class="span8">
 
+            <div class="tabbable tabs-above">
+                <ul class="nav nav-tabs" id="scheduleTab">
+                    <li class="active">
+                        <a href="#tabMonday" data-toggle="tab">Monday</a></li>
+                    <li>
+                        <a href="#tabTuesday" data-toggle="tab">Tuesday</a></li>
+                    <li>
+                        <a href="#tabWednesday" data-toggle="tab">Wednesday</a></li>
+                    <li>
+                        <a href="#tabThursday" data-toggle="tab">Thursday</a></li>
+                    <li>
+                        <a href="#tabFriday" data-toggle="tab">Friday</a></li>
+                </ul>
+                <div class="tab-content">
+                    <div class="tab-pane active" id="tabMonday">
 
-                            </div>
-                        </div>
-                        <div class="tab-pane" id="tabTuesday">
+                        <div class="actions">
+                            <a id="AddLaneAssignment" class="work" href="#" title="Add a pool lane assignment.">Add Pool Assignment</a>
 
-                          @* <span class="label label-info">Tuesday Schedule</span>*@
-                        @*    <table id="TuesSchedule" class="table table-striped table-bordered">
-                            </table>*@
                         </div>
-                        <div class="tab-pane" id="tabWednesday">
-                           @* <span class="label label-info">Wednesday Schedule</span>*@
-                           @* <table id="WedSchedule" class="table table-striped table-bordered">
-                            </table>*@
-                        </div>
-                        <div class="tab-pane" id="tabThursday">
-                            <span class="label label-info">Thursday Schedule</span>
-                        </div>
-                        <div class="tab-pane" id="tabFriday">
-                            <span class="label label-info">Friday Schedule</span>
-                        </div>
+                    </div>
+                    <div class="tab-pane" id="tabTuesday">
+                    </div>
+                    <div class="tab-pane" id="tabWednesday">
+                    </div>
+                    <div class="tab-pane" id="tabThursday">
+                        <span class="label label-info">Thursday Schedule</span>
+                    </div>
+                    <div class="tab-pane" id="tabFriday">
+                        <span class="label label-info">Friday Schedule</span>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="span4">
+            <div class="panel panel-info">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Panel title</h3>
+                    </div>
+                    <div class="panel-body">
+                        Panel content
+                    </div>
+                </div>
+            <section class="navspy nav-stacked affix">
+                
+              <div class="panel panel-info">
+                <div id="slotDesc" >
+                    <h4>Pool Activity Information</h4>
+                    <div id="renderHere"></div>
+                    <div data-bind="text: activityDescription" ></div>
+                </div>
+
+              <div id="slotDetails">
+                    <!--Templates-->
+                    <div id="intructorTemplate" >
+                        <h5>Instructor Information:</h5>
+                        <div data-bind="text: instructorName"></div>
+                        <div data-bind="text: instructorPhone"></div>
+                    </div>
+                     <div id="studentTemplate" >
+                        <h5>Student Information:</h5>
+                        <div data-bind="text: studentName"></div>
+                        <div data-bind="text: studentPhone"></div>
                     </div>
                 </div>
 
-                   </div>
-                @* <div id="themodal" class="modal hide fade">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h3>Modal header</h3>
-                    </div>
-                    <div class="modal-body">
-
-                       <div class="actions">
-                            <div>
-                                <span class="badge">Enter Appointment</span>
-                                <a id="add-entry" class="add" href="#" title="Add entries to the schedule">+ Entry</a>
-                                <a id="remove-entries" class="delete" href="#" title="Remove all entries from the schedule">- Entries</a>
-                            </div>
-
-                            <div>
-                                <a id="add-row" class="add" href="#" title="Add a new row to the schedule">+ Row</a>
-                                <a id="remove-row" class="delete" href="#" title="Delete the last row in the schedule">- Row</a>
-                            </div>
-                        </div>
-
-                        <div id="messages">
-                            <div class="message" id="info"></div>
-                            <div class="message" id="error"></div>
-                        </div>
-                        <form id="add-entry-form" action="#" method="get">
-                            <div id="add-entry-section" class="actions">
-                                <input type="text" name="entry-name" id="entry-name" />
-                                <a id="save" class="accept" href="#" title="Add entries to the schedule">Save</a>
-                                <a id="cancel" class="cancel" href="#" title="Cancel adding">Cancel</a>
-                                <ol>
-                                    <li>Enter a name.</li>
-                                    <li>Drag the mouse across the schedule to select the available times. Hold the <code>CTRL</code> key to select multiple times.</li>
-                                    <li>Click "Add."</li>
-                                </ol>
-                            </div>
-                        </form>
-
-                    </div>
-                    <div class="modal-footer">
-                        <a href="#" class="btn" data-dismiss="modal">Close</a>
-                        <a id="yesbutton" href="#" class="btn btn-primary" data-loading-text="Doing it...">Yes! Do it now!</a>
-                    </div>
-                </div>
-            </div>*@
-            <div class="span4">
-                <section class="navspy nav-stacked affix">
-                    <div id="LaneDetails" class="alert alert-success">...</div>
-                    <div class="actions">
-                        <div>
-                            <span class="badge">Enter Appointment</span>
-                            <a id="add-entry" class="add" href="#" title="Add entries to the schedule">+ Entry</a>
-                            <a id="remove-entries" class="delete" href="#" title="Remove all entries from the schedule">- Entries</a>
-                        </div>
-
-                        <div>
-                            <a id="add-row" class="add" href="#" title="Add a new row to the schedule">+ Row</a>
-                            <a id="remove-row" class="delete" href="#" title="Delete the last row in the schedule">- Row</a>
-                        </div>
-                    </div>
-
-                    <div id="messages">
-                        <div class="message" id="info"></div>
-                        <div class="message" id="error"></div>
-                    </div>
-                    <form id="add-entry-form" action="#" method="get">
-                        <div id="add-entry-section" class="actions">
-                            <input type="text" name="entry-name" id="entry-name" />
-                            <a id="save" class="accept" href="#" title="Add entries to the schedule">Save</a>
-                            <a id="cancel" class="cancel" href="#" title="Cancel adding">Cancel</a>
-                            <ol>
-                                <li>Enter a name.</li>
-                                <li>Drag the mouse across the schedule to select the available times. Hold the <code>CTRL</code> key to select multiple times.</li>
-                                <li>Click "Add."</li>
-                            </ol>
-                        </div>
-                    </form>
-                </section>
-            </div>
-          
-                  @* <div id="tabs">
-              <ul class="nav nav-tabs">
-                <li><a href="#tabs-1">Monday</a></li>
-                <li><a href="#tabs-2">Tuesday</a></li>
-                <li><a href="#tabs-3">Wednesday</a></li>
-                <li><a href="#tabs-4">Thursday</a></li>
-                <li><a href="#tabs-5">Friday</a></li>
-                <li><a href="#tabs-6">Saturday</a></li>
-              </ul>
-               <div id="tabs-1">
-                   <table id="schedule" class="table table-striped table-bordered table-condensed">
-                   </table>
-
-                   <div class="actions">
-                       <a id="generate" class="work" href="#" title="Generate a possible schedule">Generate Schedule</a>
-                       <a id="AddLaneAssignment" class="work" href="#" title="Add a pool lane assignment.">Add Pool Assignment</a>
-                   </div>
-               </div>
-              <div id="tabs-2">
-                   <table id="TuesSchedule" class="table table-striped table-bordered">
-                   </table>
-              
               </div>
-              <div id="tabs-3">
-              </div>
-              <div id="tabs-4">
-              </div>
-              <div id="tabs-5">
-              </div>
-              <div id="tabs-6">
-              </div>
-            </div>*@
-            </div>
+            </section>
+        </div>
+
+    </div>
+</div>
        
 
