--- a/FishersYMCA.Swimming.WebAPI/Content/scheduler.css
+++ b/FishersYMCA.Swimming.WebAPI/Content/scheduler.css
@@ -101,7 +101,8 @@ thead th,tbody td { width:50px; min-width:120px; }*/
 	display:block; float:left;
 	margin:5px; padding:5px;
 	border:1px solid #aaa;
-    width:inherit;
+    width:100%;
+    height:100%;
 	/*background-color:#700; color:#700;*/
     cursor:pointer;
 	border-color:#070;
@@ -112,8 +113,9 @@ thead th,tbody td { width:50px; min-width:120px; }*/
 	display:block; float:left;
 	margin:5px; padding:5px;
 	border:1px solid #aaa;
-    width:inherit;
-	    cursor:pointer;
+    width:100%;
+    height:100%;
+	cursor:pointer;
 	border-color:#000677;
 	background-color:#aad3ee; color:#000677;
 }
@@ -122,11 +124,12 @@ thead th,tbody td { width:50px; min-width:120px; }*/
 	display:block; float:left;
 	margin:5px; padding:5px;
 	border:1px solid #aaa;
-    width:inherit;
-	    cursor:pointer;
+    width:100%;
+    height:100%;
+	cursor:pointer;
 	border-color:#000677;
 	background-color:#aad3ee; color:#000677;
-    	border-color:#700;
+    border-color:#700;
 	background-color:#eaa; color:#700;
 }
 
@@ -134,8 +137,9 @@ thead th,tbody td { width:50px; min-width:120px; }*/
 	display:block; float:left;
 	margin:5px; padding:5px;
 	border:1px solid #aaa;
-    width:inherit;
-	    cursor:pointer;
+    width:100%;
+    height:100%;
+	cursor:pointer;
 	border-color:#ff6a00;
 	background-color:#fcb786; color:#a05017;
 }
@@ -144,8 +148,9 @@ thead th,tbody td { width:50px; min-width:120px; }*/
 	display:block; float:left;
 	margin:5px; padding:5px;
 	border:1px solid #aaa;
-    width:inherit;
-	    cursor:pointer;
+    width:100%;
+    height:100%;
+	cursor:pointer;
 	border-color:#333;
 	background-color:#aaa; color:#333;
 }
