--- a/FishersYMCA.Swimming.WebAPI/Views/Home/Index.cshtml
+++ b/FishersYMCA.Swimming.WebAPI/Views/Home/Index.cshtml
@@ -4,6 +4,10 @@
 
         <div class="col-md-8">
 
+            <div id="errorAlert" class="alert alert-danger alert-dismissable">
+              <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+              <strong>Warning!</strong> Better check yourself, you're not looking too good.
+            </div>
             <div class="panel panel-info fade in">
                 <div class="panel-heading">
                     <h3 class="panel-title">Pool Schedule</h3>
@@ -45,14 +49,15 @@
                 </div>
 
             </div>
+
+
+
+
             </div>
         <div class="col-md-4">
             @*<section class="navspy nav-stacked affix">*@
 
                 <div id="slotDesc" class="panel panel-info fade in" style="display: none">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Lane Activity Information</h3>
-                    </div>
                     <div class="panel-body">
                         
                             <div data-bind="text: activityDescription"></div>
@@ -61,16 +66,17 @@
                         <div id="slotDetails">
                             <!--Templates-->
                             <div id="intructorTemplate" >
-                                <h4>Instructor Information:</h4>
+                                <h5>Instructor Information:</h5>
                                 <div data-bind="text: instructorName"></div>
                                 <div data-bind="text: instructorPhone"></div>
                             </div>
                             <div id="studentTemplate" >
-                                <h4>Student Information:</h4>
+                                <h5>Student Information:</h5>
                                 <div data-bind="text: studentName"></div>
                                 <div data-bind="text: studentPhone"></div>
                             </div>
                         </div>
+                        <button type="button" class="btn btn-primary btn-xs">Change Details</button>
                     </div>
                 </div>
             @*</section>*@
