--- a/FishersYMCA.Swimming.WebAPI/Views/Shared/_Layout.cshtml
+++ b/FishersYMCA.Swimming.WebAPI/Views/Shared/_Layout.cshtml
@@ -6,36 +6,27 @@
     <title>@ViewBag.Title</title>
    
 
-    @Scripts.Render("~/bundles/modernizr")
-   
-    @Styles.Render("~/Content/bootstrap")
  @Styles.Render("~/Content/css")
 </head>
 <body>
     <nav class="navbar navbar-fixed-top navbar-default " role="navigation">
-        @*<div class="navbar-header">*@
-            @*  <a class="brand" href="/">Pool Lanes Scheduler</a>*@
+
             <div >
                 <div class="media">
                     <a class="pull-left" href="http://www.indymca.org/centers/fishers/center-news/">
                         <img class="media-object img-rounded" src="~/resources/YMCAlogo.png" />
                     </a>
                     <div class="media-body">
-                       @* <a class="brand" href="/">Fishers YMCA Aquatics Pool Scheduler</a>*@
                         <h2 class="media-heading">Fishers YMCA Aquatics Pool Scheduler</h2>
                     </div>
                 </div>
             </div>
-        @*</div>*@
+      
     </nav>
 
     @RenderBody()
- @Scripts.Render("~/bundles/knockout")
-    @Scripts.Render("~/bundles/require")
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryui")
-  
-    @Scripts.Render("~/bundles/bootstrap")
+     @Scripts.Render("~/bundles/core")
+
     @Scripts.Render("~/bundles/app")
 
     @RenderSection("scripts", required: false)
