Additional Javascript updates

--- a/FishersYMCA.Swimming.WebAPI/Views/Home/Index.cshtml
+++ b/FishersYMCA.Swimming.WebAPI/Views/Home/Index.cshtml
@@ -57,7 +57,7 @@
         <div class="col-md-4">
             @*<section class="navspy nav-stacked affix">*@
 
-                <div id="slotDesc" class="panel panel-info fade in" style="display: none">
+                <div id="slotDesc" class="panel panel-info fade in" hidden="hidden" >
                     <div class="panel-body">
                         
                             <div data-bind="text: activityDescription"></div>
