--- a/FishersYMCA.Swimming.WebAPI/Views/Home/Index.cshtml
+++ b/FishersYMCA.Swimming.WebAPI/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
                 <div class="panel-heading">
                     <h3 class="panel-title">Pool Schedule</h3>
                 </div>
-                <div class="panel-body">
+                <div id="scheduleContainer" class="panel-body">
                     @*<p>Date: <input type="text" id="datepicker"></p>*@
                     <ul class="nav nav-tabs" id="scheduleTab">
                         <li class="active">
